name: kdwm
version: 0.0.1
cabal-version: -any
build-type: Make
license: AllRightsReserved
license-file: ""
copyright:
maintainer:
build-depends: MaybeT -any, X11 -any, base -any, containers -any,
               mtl -any, queuelike -any, template-haskell -any
stability:
homepage: http://github.com/ktvoelker/kdwm
package-url:
bug-reports:
synopsis: Karl's window manager
description: A window manager that does what I want.
category:
author:
tested-with:
data-files:
data-dir: ""
extra-source-files:
extra-tmp-files:
 
executable: kdwm
main-is: Main.hs
buildable: True
build-tools:
cpp-options:
cc-options:
ld-options:
pkgconfig-depends:
frameworks:
c-sources:
extensions: FlexibleContexts EmptyDataDecls TemplateHaskell
            NoImplicitPrelude LiberalTypeSynonyms RecordWildCards
            DisambiguateRecordFields
extra-libraries:
extra-lib-dirs:
includes:
install-includes:
include-dirs:
hs-source-dirs: src
other-modules:
ghc-prof-options:
ghc-shared-options:
ghc-options: -fglasgow-exts
hugs-options:
nhc98-options:
jhc-options: